--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -70,7 +70,7 @@
 
             <div class="col-sm-12" >
             <mat-form-field>
-            <mat-select placeholder="Search By Category" [(ngModel)]=cates name="cat" (change)="onSubmit(f)">
+            <mat-select placeholder="Search By Category" [(ngModel)]=cates name="cat" #category (change)="onSubmit(f);subcategory(category.value)">
                 <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}" placeholder="Search By Category"  class="search-allstates" style="width: 100%; border-radius: 7px">
                 <i class="fa fa-search s-icon-all-states" area-hidden="true" ></i>
                 <mat-option value='all'>Select All</mat-option>
@@ -78,6 +78,16 @@
             </mat-select>
             </mat-form-field>
             </div>
+            <div class="col-sm-12" >
+                <mat-form-field>
+                <mat-select placeholder="Search By Sub Category" [(ngModel)]=subcates name="subcat" [disabled]="!cates" >
+                    <input class="inp" type="text" [(ngModel)]="subcatsearch" [ngModelOptions]="{standalone: true}" placeholder="Search By sub Category"  class="search-allstates" style="width: 100%; border-radius: 7px">
+                    <i class="fa fa-search s-icon-all-states" area-hidden="true" ></i>
+                    <mat-option value='all'>Select All</mat-option>
+                    <mat-option class="elips-mat-opt" *ngFor="let catitem of sub_categories| filter:subcatsearch" [value]="catitem.subcategory_name" title="{{catitem.subcategory_name}}">{{catitem.subcategory_name}}</mat-option>
+                </mat-select>
+                </mat-form-field>
+                </div>
             </div>
             </form>
             </div>
