--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -105,8 +105,8 @@
                         </h4>
                         <div attr.id="View{{rfp.id}}" class="panel-details collapse">
                             
-                        </div> -->
-               
+                        </div>
+                -->
                 
                 <a class="abc" (click)=" formclear()" [routerLink]="['/state']" [queryParams]="{ state: 'California'}">California</a>
             </li>
@@ -143,9 +143,38 @@
                 </h5>
             </li>
             <li>
-                <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Global , Software, System and Application'}" class="view-more collapsed" data-toggle="collapse" data-target="#sh-state"  (click)="subcategory('Global , Software, System and Application')"> Global , Software, System and Application <i class="material-icons pull-right" >arrow_drop_down</i> </a><div *ngIf="sub_categories"><div id="sh-state" class="panel-details collapse" *ngFor="let catitem of sub_categories">
-                    {{catitem.subcategory_name}}
-                </div></div>
+                    <h4 class="view-more collapsed" data-toggle="collapse" data-target="#sh-state">
+                            Details
+                            <i class="material-icons">arrow_drop_down</i>
+                        </h4>
+                        <div id="sh-state" class="panel-details collapse">
+                            <!-- asdfklasdjflaksdjfla sdflkjasd
+                            <br>
+                            asdfklasdjflaksdjfla sdflkjasd
+                            <br>
+                            asdfklasdjflaksdjfla sdflkjasd
+                            <br>
+                            asdfklasdjflaksdjfla sdflkjasd
+                            <br> -->
+
+                          <div *ngFor="let catitem of sub_categories">
+                                <p>
+                                        {{catitem.subcategory_name}}
+                                </p>
+                          </div>
+                          
+                        </div>
+               
+                <!-- <a class="abc" class="view-more collapsed" data-toggle="collapse" data-target="#sh-state">
+                     Global , Software, System and Application 
+                    <i class="material-icons pull-right" >arrow_drop_down</i>
+                 </a>
+               <div id="sh-state" class="panel-details collapse" >
+                <ul *ngFor="let catitem of sub_categories">
+                    <li>{{catitem.subcategory_name}}</li>
+                </ul>   
+                
+                </div> -->
             </li>
             <li>
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Engine Accessories'}"> Engine Accessories </a>
