--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -1,15 +1,14 @@
 <app-loader></app-loader>
 
-<div class="main-panel" [ngClass]="status ? 'sidebarActive' : ''">
+<div class="main-panel add-rfp" [ngClass]="status ? 'sidebarActive' : ''">
   <div class="main-content custom">
     <div class="container-fluid">
       <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-10 mg-0-auto">
               <div class="page-title">
                   <div class="col-sm-6 m-10-0">
                     <span>Add New RFP</span>
                   </div>
-                 
                 </div>
         <form class="sh-signup-form-fix edit-rfp-form" >
 
