--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -163,7 +163,7 @@
                 </a>
                 <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state"  (click)="subcategory('Global , Software, System and Application')"></i>
                 <div>
-                    <div id="sh-state" class="panel-details collapse">
+                    <div id="sh-state" class="panel-details side collapse">
                         <ul *ngFor="let catitem of sub_categories"><li>
                                 {{catitem.subcategory_name}}
                                
@@ -177,7 +177,7 @@
                     Engine Accessories </a>
                     <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state6"  (click)="subcategory('Engine Accessories')"></i>
                     <div>
-                        <div id="sh-state6" class="panel-details collapse">
+                        <div id="sh-state6" class="panel-details side collapse">
                             <ul *ngFor="let catitem of sub_categories"><li>
                                     {{catitem.subcategory_name}}
                                    
@@ -190,7 +190,7 @@
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'HR Services'}">
                     HR Services </a> <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state5"  (click)="subcategory('HR Services')"></i>
                     <div>
-                        <div id="sh-state5" class="panel-details collapse">
+                        <div id="sh-state5" class="panel-details side collapse">
                             <ul *ngFor="let catitem of sub_categories"><li>
                                     <a class="abc" (click)=" formclear()" [routerLink]="['/subcategory']" [queryParams]="{ subcat: catitem.subcategory_name}">
                                     {{catitem.subcategory_name}}</a>
@@ -204,7 +204,7 @@
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'IT Services (Computer Maintenance and Technical Services)'}">
                     IT Services (Computer Maintenance and Technical Services) </a><i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state4"  (click)="subcategory('IT Services (Computer Maintenance and Technical Services)')"></i>
                     <div>
-                        <div id="sh-state4" class="panel-details collapse">
+                        <div id="sh-state4" class="panel-details side collapse">
                             <ul *ngFor="let catitem of sub_categories"><li>
                                     <a class="abc" (click)=" formclear()" [routerLink]="['/subcategory']" [queryParams]="{ subcat: catitem.subcategory_name}">
                                     {{catitem.subcategory_name}}</a>
@@ -218,7 +218,7 @@
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Medical and Surgical Supplies'}">
                     Medical and Surgical Supplies </a><i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state3"  (click)="subcategory('Medical and Surgical Supplies')"></i>
                     <div>
-                        <div id="sh-state3" class="panel-details collapse">
+                        <div id="sh-state3" class="panel-details side collapse">
                             <ul *ngFor="let catitem of sub_categories"><li>
                                     <a class="abc" (click)=" formclear()" [routerLink]="['/subcategory']" [queryParams]="{ subcat: catitem.subcategory_name}">
                                     {{catitem.subcategory_name}}</a>
@@ -232,7 +232,7 @@
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Rental Services'}">
                     Rental Services </a><i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" data-target="#sh-state2"  (click)="subcategory('Rental Services')"></i>
                     <div>
-                        <div id="sh-state2" class="panel-details collapse">
+                        <div id="sh-state2" class="panel-details side collapse">
                             <ul *ngFor="let catitem of sub_categories"><li>
                                     <a class="abc" (click)=" formclear()" [routerLink]="['/subcategory']" [queryParams]="{ subcat: catitem.subcategory_name}">
                                     {{catitem.subcategory_name}}</a>
