--- a/src/app/features-comparison/features-comparison.component.html
+++ b/src/app/features-comparison/features-comparison.component.html
@@ -7,110 +7,70 @@
       <table class="table table-bordered table-striped">
         <thead>
           <tr>
-            <th>Features</th>
+            <th>Compare our Features to the Competition</th>
             <th>RFPGurus</th>
-            <th>RFPMart</th>
-            <th>VendorLine</th>
-            <th>AllGovBids</th>
-            <th>BidNetDirect</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td><strong>Average Pricing / Year</strong></td>
             <td>$ 199.99</td>
-            <td>$ 1200</td>
-            <td>$ 295</td>
-            <td>$ 270</td>
-            <td>$ 1320</td>
+          
           </tr>
           <tr>
             <td><strong>Bid Matching Artificial Intelligence (AI)</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+           
           </tr>
           <tr>
             <td><strong>Upcoming Bids</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+           
           </tr>
           <tr>
             <td><strong>State & Local Agency Bids</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
+         
           </tr>
           <tr>
             <td><strong>Federal Agency Bids</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
+           
           </tr>
           <tr>
             <td><strong>Daily Email Bid Alerts & Notifications</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
+           
           </tr>
           <tr>
             <td><strong>Search Engine</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-check"></i></td>
+           
           </tr>
           <tr>
             <td><strong>Android Mobile App</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+      
           </tr>
           <tr>
             <td><strong>iOS Mobile App</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+      
           </tr>
           <tr>
             <td><strong>Winning Bidder Insight</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+           
           </tr>
           <tr>
             <td><strong>Technical Support Chat</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
+           
           </tr>
           <tr>
             <td><strong>RFP as a Service*</strong></td>
             <td><i class="fa fa-check"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
-            <td><i class="fa fa-times"></i></td>
+         
           </tr>
         </tbody>
       </table>
